# package-porter

./: .gitignore  Cargo.toml  LICENSE  README.md  package-porter.sh
.github/workflows/: ci.yml  rust-installation.yml
src/: cli.rs  config.rs  lib.rs  main.rs  utils.rs
src/package_managers/: mod.rs  npm.rs  pypi.rs
tests/: utils_tests.rs
