[package]
name = "package-porter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.122"
semver = "1.0.23"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
clap = { version = "4.5.13", features = ["derive"] }
dotenv = "0.15.0"
tempfile = "3.11.0"
log = "0.4.22"
env_logger = "0.11.5"
url = "2.5.2"
